WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306773
Forward declare `LayerHostingContextIdentifier` in WebPageProxy instead of including it
https://bugs.webkit.org/show_bug.cgi?id=306773
Summary
Forward declare `LayerHostingContextIdentifier` in WebPageProxy instead of in...
Richard Robinson
Reported
2026-02-02 08:50:58 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-02 08:51:04 PST
<
rdar://problem/169448726
>
Richard Robinson
Comment 2
2026-02-02 08:52:51 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57698
EWS
Comment 3
2026-02-02 10:17:24 PST
Committed
306637@main
(9a3e82acf56b): <
https://commits.webkit.org/306637@main
> Reviewed commits have been landed. Closing PR #57698 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug