Forward declare `LayerHostingContextIdentifier` in WebPageProxy instead of including it https://bugs.webkit.org/show_bug.cgi?id=306773 rdar://169448726

Reviewed by Abrar Rahman Protyasha.

Everything else is forward declared, and this should be too.

* Source/WebKit/UIProcess/WebPageProxy.h:

Canonical link: https://commits.webkit.org/306637@main